--- a/Week1/addItem.html
+++ b/Week1/addItem.html
@@ -16,7 +16,7 @@
     	<h1>Game Development:<br>To Do List</h1>
     	<h2>Add Task</h2>
         <form action="#" method="post" id="entryForm">
-        	<fieldset>
+        	<fieldset id="mainForm">
             	<legend>Create New Task</legend>
                 <ol id="error"></ol>
                 <!--select the type of task to be done-->
