--- a/Week1/index.html
+++ b/Week1/index.html
@@ -25,17 +25,19 @@
     	<div id="nav">
     		<h2>Browse Categories</h2>
         	<p id="navItems">
-                <a href="#" class="browseItem"><img src="img/Programming.png" width="50" height="50"></a>
-                <a href="#" class="browseItem"><img src="img/Design.png" width="50" height="50"></a>               
-                <a href="#" class="browseItem"><img src="img/Art.png" width="50" height="50"></a>             
-                <a href="#" class="browseItem"><img src="img/Sound.png" width="50" height="50"></a>               
-                <a href="#" class="browseItem"><img src="img/UI.png" width="50" height="50"></a>
-            </p>
-            <form>
-                <fieldset>
-                    <input name="search" type="text" id="search" value="search for item">
-                </fieldset>
-            </form>       
+                <a href="browse.html" class="browseItem"><img src="img/Programming.png" width="50" height="50"></a>
+                <a href="browse.html" class="browseItem"><img src="img/Design.png" width="50" height="50"></a>               
+                <a href="browse.html" class="browseItem"><img src="img/Art.png" width="50" height="50"></a>             
+                <a href="browse.html" class="browseItem"><img src="img/Sound.png" width="50" height="50"></a>               
+                <a href="browse.html" class="browseItem"><img src="img/UI.png" width="50" height="50"></a>
+                <form>
+                    <fieldset id="search">
+                        <input name="search" type="button" value="Search">
+                        <input name="search" type="text" id="search" value="search for item">
+                    </fieldset>
+                </form>  
+                <br>
+            </p>     
         </div>
 	</body>
 </html>
