--- a/Week2/Gold/index.html
+++ b/Week2/Gold/index.html
@@ -4,6 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <title>Untitled Document</title>
 </head>
+		<!--Gold-->
 		<meta charset="utf-8"/>
         <meta name="description" content="To do list"/>
         <meta name="keywords" content=""/>
@@ -26,7 +27,7 @@
             	<ul>
                 	<li><a href="#home">Home</a></li>
                     <li><a href="#info">Info</a></li>
-                    <li><a href="#addItem">Add Item</a></li>
+                    <li><a href="addItem.html" data-ajax="false">Add Item</a></li>
                 </ul>
             </div>
         </div>
@@ -83,7 +84,7 @@
             	<ul>
                 	<li><a href="#home">Home</a></li>
                     <li><a href="#info">Info</a></li>
-                    <li><a href="#browse">Add Item</a></li>
+                    <li><a href="addItem.html" data-ajax="false">Add Item</a></li>
                 </ul>
             </div>
         </div>
@@ -141,7 +142,7 @@
             	<ul>
                 	<li><a href="#home">Home</a></li>
                     <li><a href="#info">Info</a></li>
-                    <li><a href="#browse">Add Item</a></li>
+                    <li><a href="addItem.html" data-ajax="false">Add Item</a></li>
                 </ul>
             </div>
         </div>
@@ -199,7 +200,7 @@
             	<ul>
                 	<li><a href="#home">Home</a></li>
                     <li><a href="#info">Info</a></li>
-                    <li><a href="#browse">Add Item</a></li>
+                    <li><a href="addItem.html" data-ajax="false">Add Item</a></li>
                 </ul>
             </div>
         </div>
@@ -257,7 +258,7 @@
             	<ul>
                 	<li><a href="#home">Home</a></li>
                     <li><a href="#info">Info</a></li>
-                    <li><a href="#browse">Add Item</a></li>
+                    <li><a href="addItem.html" data-ajax="false">Add Item</a></li>
                 </ul>
             </div>
         </div>
@@ -315,7 +316,7 @@
             	<ul>
                 	<li><a href="#home">Home</a></li>
                     <li><a href="#info">Info</a></li>
-                    <li><a href="#browse">Add Item</a></li>
+                    <li><a href="addItem.html" data-ajax="false">Add Item</a></li>
                 </ul>
             </div>
         </div>
@@ -373,7 +374,7 @@
             	<ul>
                 	<li><a href="#home">Home</a></li>
                     <li><a href="#info">Info</a></li>
-                    <li><a href="#addItem">Add Item</a></li>
+                    <li><a href="addItem.html" data-ajax="false">Add Item</a></li>
                 </ul>
             </div>
         </div>
