--- a/Week3/Bronze/index.html
+++ b/Week3/Bronze/index.html
@@ -24,6 +24,11 @@
         	<h1>Game Developer Aid</h1>
         </div>
         <div data-role="content">
+        	<div>
+                <form>
+                    <input name="search" id="search" value="" placeholder="Search" type="search">
+                </form><br />
+            </div>
         	<!--Feature-->
             <div id="feature">
             </div>
@@ -267,13 +272,234 @@
             <div data-role="navbar">
             	<ul>
                 	<li><a href="#home" class="ui-btn-active">Home</a></li>
+                    <li><a href="#allItems">All Items</a></li>
                     <li><a href="#info">Info</a></li>
                     <li><a href="addItem.html" data-ajax="false">Add Item</a></li>
                 </ul>
             </div>
         </div>
     </div>
-
+	<!--Newsstream-->
+    <div data-role="page" id="allItems">
+    	<div data-role="header" data-position="fixed" data-theme="b">
+        	<h1>Game Developer Aid</h1>
+        </div>
+        <div data-role="content">
+        	<ul data-role="listview" data-filter="true">
+                <div data-role="collapsible">
+                    <h3>Start Menu</h3>
+                    <p>
+                        Medium Imporatance<br />
+                        Start Date: 03/19/2013<br />
+                        End Date: 03/23/2013<br />
+                        Hours: 15<br />
+                        Description: Design and program the start menu
+                    </p>
+                </div>
+                <div data-role="collapsible">
+                    <h3>Main Character Concept Art</h3>
+                    <p>
+                        High Imporatance<br />
+                        Start Date: 03/19/2013<br />
+                        End Date: 03/24/2013<br />
+                        Hours: 5<br />
+                        Description: Outline some first ideas
+                    </p>
+                </div>
+                 <div data-role="collapsible">
+					<h3>Gun Sounds</h3>
+                    <p>
+                        Medium Imporatance<br />
+                        Start Date: 03/20/2013<br />
+                        End Date: 03/20/2013<br />
+                        Hours: 8<br />
+                        Description: Go to the firing range, and record some sounds for pistols and assault rifles
+                    </p>
+                </div>
+                <div data-role="collapsible">
+                     <h3>Design Level 1</h3>
+                    <p>
+                        High Imporatance<br />
+                        Start Date: 03/22/2013<br />
+                        End Date: 03/28/2013<br />
+                        Hours: 30<br />
+                        Description: Design the first level, "Ides of March" of the game. Start with a bang for an introduction
+                    </p>
+                </div>
+                <div data-role="collapsible">
+                    <h3>Particle Engine</h3>
+                    <p>
+                        High Imporatance<br />
+                        Start Date: 04/01/2013<br />
+                        End Date: 04/28/2013<br />
+                        Hours: 50<br />
+                        Description: Create a good and efficient particle engine
+                    </p>
+                </div>
+                <div data-role="collapsible">
+                    <h3>HUD</h3>
+                    <p>
+                        High Imporatance<br />
+                        Start Date: 04/01/2013<br />
+                        End Date: 04/28/2013<br />
+                        Hours: 50<br />
+                        Description: Create the most important UI element the HUD to be unobtrusive, but informative
+                    </p>
+                </div>
+                <div data-role="collapsible">
+                    <h3>Level 1 Scripting</h3>
+                    <p>
+                        Medium Imporatance<br />
+                        Start Date: 04/01/2013<br />
+                        End Date: 04/28/2013<br />
+                        Hours: 50<br />
+                        Description: Script all of the events of level one
+                    </p>
+                </div>
+                 <div data-role="collapsible">
+                    <h3>UI Sounds</h3>
+                    <p>
+                        Least Imporatance<br />
+                        Start Date: 04/01/2013<br />
+                        End Date: 04/28/2013<br />
+                        Hours: 50<br />
+                        Description: Create sounds that fit the theme or the game, and style of the UI elements
+                    </p>
+                </div>
+                <div data-role="collapsible">
+                    <h3>Enemy AI</h3>
+                    <p>
+                        High Imporatance<br />
+                        Start Date: 04/01/2013<br />
+                        End Date: 05/26/2013<br />
+                        Hours: 50<br />
+                        Description: Get a working Enemy AI system up and running that is usable for testing
+                    </p>
+                </div>
+                <div data-role="collapsible">
+                    <h3>Pause Menu</h3>
+                    <p>
+                        Medium Imporatance<br />
+                        Start Date: 04/02/2013<br />
+                        End Date: 04/04/2013<br />
+                        Hours: 10<br />
+                        Description: Create an efficient and clean pause menu
+                    </p>
+                </div>
+                <div data-role="collapsible">
+                    <h3>Weapon Concept</h3>
+                    <p>
+                        Low Imporatance<br />
+                        Start Date: 04/02/2013<br />
+                        End Date: 04/04/2013<br />
+                        Hours: 20<br />
+                        Description: Come up with some concept ideas for the weapons
+                    </p>
+                </div>
+                <div data-role="collapsible">
+                    <h3>Level Art</h3>
+                    <p>
+                        High Imporatance<br />
+                        Start Date: 04/09/2013<br />
+                        End Date: 04/24/2013<br />
+                        Hours: 30<br />
+                        Description: Work on the level art for the first level
+                    </p>
+                </div> 
+                <div data-role="collapsible">
+                    <h3>Main Antagonist Concept</h3>
+                    <p>
+                        Low Imporatance<br />
+                        Start Date: 04/19/2013<br />
+                        End Date: 04/22/2013<br />
+                        Hours: 10<br />
+                        Description: Brainstorm, concept ideas for the main antagonist
+                    </p>
+                </div>
+                <div data-role="collapsible">
+                    <h3>Design Level 2</h3>
+                    <p>
+                        Medium Imporatance<br />
+                        Start Date: 05/20/2013<br />
+                        End Date: 05/28/2013<br />
+                        Hours: 25<br />
+                        Description: Design level two, "Cloud 9"
+                    </p>
+                </div>
+                <div data-role="collapsible">
+                    <h3>Level Programming</h3>
+                    <p>
+                        Low Imporatance<br />
+                        Start Date: 06/01/2013<br />
+                        End Date: 06/10/2013<br />
+                        Hours: 10<br />
+                        Description: Create the function that allows the game to go from one level to the next
+                    </p>
+                </div>
+                <div data-role="collapsible">
+                    <h3>Combat</h3>
+                    <p>
+                        High Imporatance<br />
+                        Start Date: 06/10/2013<br />
+                        End Date: 06/28/2013<br />
+                        Hours: 50<br />
+                        Description: Work on the initial strength and balancing of the weapons
+                    </p>
+                </div>
+                <div data-role="collapsible">
+                    <h3>Vehicle Sounds</h3>
+                    <p>
+                        Low Imporatance<br />
+                        Start Date: 06/10/2013<br />
+                        End Date: 06/30/2013<br />
+                        Hours: 30<br />
+                        Description: Gather potential sounds for in game vehicles
+                    </p>
+                </div>
+                <div data-role="collapsible">
+                    <h3>Design Level 3</h3>
+                    <p>
+                        Low Imporatance<br />
+                        Start Date: 06/22/2013<br />
+                        End Date: 06/28/2013<br />
+                        Hours: 25<br />
+                        Description: Design Level Three, "We are the Champions: Of the World"
+                    </p>
+                </div>
+                <div data-role="collapsible">
+                    <h3>Multiplayer Menu</h3>
+                    <p>
+                        Low Imporatance<br />
+                        Start Date: 07/19/2013<br />
+                        End Date: 07/24/2013<br />
+                        Hours: 15<br />
+                        Description: Design and Implement the multiplayer pre-game menu
+                    </p>
+                </div>
+                <div data-role="collapsible">
+                    <h3>Voice Acting</h3>
+                    <p>
+                        Least Imporatance<br />
+                        Start Date: 08/01/2013<br />
+                        End Date: 10/24/2013<br />
+                        Hours: 200<br />
+                        Description: Record the voice actors
+                    </p>
+                </div>  
+            </ul>
+        </div>
+        <div data-role="footer" data-position="fixed" data-theme="b">
+            <!--NavBar-->
+            <div data-role="navbar">
+            	<ul>
+                	<li><a href="#home">Home</a></li>
+                    <li><a href="#allItems" class="ui-btn-active">All Items</a></li>
+                    <li><a href="#info">Info</a></li>
+                    <li><a href="addItem.html" data-ajax="false">Add Item</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
     <!--Info-->
     <div data-role="page" id="info">
     	<div data-role="header" data-position="fixed" data-theme="b">
@@ -282,16 +508,17 @@
         <div data-role="content">
         	<ul data-role="listview">
                 <li><a href="../Gold/index.html" data-ajax="false">Gold</a></li>
-                <li><a href="https://github.com/b58855/MIU/tree/master/Week2" data-ajax="false">Git Repo</a></li>
-                <li><a href="http://b58855.github.io/MIU/Week2/Bronze" data-ajax="false">Git gh-pages</a></li>
+                <li><a href="https://github.com/b58855/MIU/tree/master/Week3" data-ajax="false">Git Repo</a></li>
+                <li><a href="http://b58855.github.io/MIU/Week3/Bronze" data-ajax="false">Git gh-pages</a></li>
             </ul>
         </div>
         <div data-role="footer" data-position="fixed" data-theme="b">
             <!--NavBar-->
             <div data-role="navbar">
             	<ul>
-                	<li><a href="#home" class="ui-btn-active">Home</a></li>
-                    <li><a href="#info">Info</a></li>
+                	<li><a href="#home">Home</a></li>
+                    <li><a href="#allItems">All Items</a></li>
+                    <li><a href="#info" class="ui-btn-active">Info</a></li>
                     <li><a href="addItem.html" data-ajax="false">Add Item</a></li>
                 </ul>
             </div>
