--- a/Week4/Gold/index.html
+++ b/Week4/Gold/index.html
@@ -735,11 +735,11 @@
                     <div data-role="fieldcontain">
                         <fieldset data-role="controlgroup">
                             <legend>Importance:</legend>
-                            <input name="Importance" type="radio" value="Very" id="mostImportant" class="data required" checked="checked">
+                            <input name="importance" type="radio" value="Very" id="mostImportant" class="data required" checked="checked">
                             <label for="mostImportant">Most Importance:</label>
-                            <input name="Importance" type="radio" value="Some" id="important">
+                            <input name="importance" type="radio" value="Some" id="important">
                             <label for="important">Some Importance:</label>
-                            <input name="Importance" type="radio" value="Little" id="leastImportant">
+                            <input name="importance" type="radio" value="Little" id="leastImportant">
                             <label for="leastImportant">Little Importance:</label>
                         </fieldset>
                     </div>
